<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_color_backgroud"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="18dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animacion_carga"
            android:layout_width="407dp"
            android:layout_height="443dp"
            app:layout_constraintBottom_toTopOf="@+id/texto_cargando"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="AnimationMain.json"
            app:lottie_loop="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notoserif"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:fontFamily="@font/notoserif"
            android:textColor="@android:color/white"
            android:text="@string/Btn_Login"
            android:background="@drawable/btn_login_background"
            app:backgroundTint="@null"
            app:rippleColor="@null" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_Registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:fontFamily="@font/notoserif"
            android:textColor="@android:color/white"
            android:text="@string/Btn_Registro"
            android:background="@drawable/btn_background"
            app:backgroundTint="@null"
            app:rippleColor="@null" />



    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>