<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_backgroud"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notoserif"
            android:gravity="center"
            android:text="@string/IniciarSesionTXT"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animacion_carga"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/texto_cargando"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="AnimationLogin.json"
            app:lottie_loop="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/CorreoLogin"
            android:textColorHint="@android:color/white"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"

            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/input_outline"
            app:boxStrokeWidth="2dp"

            app:boxStrokeWidthFocused="2dp"
            app:endIconTint="@android:color/white"
            app:hintTextColor="@android:color/white"
            app:startIconDrawable="@drawable/baseline_email_24"
            app:startIconTint="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CorreoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/PassLogin"
            android:textColorHint="@android:color/white"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"

            app:boxStrokeColor="@color/input_outline"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"

            app:endIconMode="password_toggle"
            app:endIconTint="@android:color/white"
            app:hintTextColor="@android:color/white"
            app:startIconDrawable="@drawable/baseline_lock_24px"
            app:startIconTint="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PassLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BtnLogeo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/notoserif"
            android:text="@string/Btn_Login"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:rippleColor="@null" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/UsuarioNuevoTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:clickable="true"

            android:focusable="true"
            android:text="@string/UsuarioNuevoTXT"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>