<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_backgroud"
    tools:context=".RegistroActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notoserif"
            android:gravity="center"
            android:text="@string/CrearCuentaTxt"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animacion_carga"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_fileName="registro.json"
            app:lottie_loop="true" />

        <!-- Campo: Username -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="Nombre de usuario"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:startIconDrawable="@drawable/baseline_person_24"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/input_outline"
            app:hintTextColor="@android:color/white"
            app:startIconTint="@android:color/white"
            app:endIconTint="@android:color/white"
            android:textColorHint="@android:color/white"
            app:boxStrokeWidthFocused="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UsernameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo: Nombre -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/NombreEt"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:startIconDrawable="@drawable/baseline_person_24"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/input_outline"
            app:hintTextColor="@android:color/white"
            app:startIconTint="@android:color/white"
            app:endIconTint="@android:color/white"
            android:textColorHint="@android:color/white"
            app:boxStrokeWidthFocused="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NombreEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo: Apellido -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="Apellido"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:startIconDrawable="@drawable/baseline_person_24"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/input_outline"
            app:hintTextColor="@android:color/white"
            app:startIconTint="@android:color/white"
            app:endIconTint="@android:color/white"
            android:textColorHint="@android:color/white"
            app:boxStrokeWidthFocused="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ApellidoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo: Teléfono -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="Teléfono"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:startIconDrawable="@drawable/baseline_phone_24"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/input_outline"
            app:hintTextColor="@android:color/white"
            app:startIconTint="@android:color/white"
            app:endIconTint="@android:color/white"
            android:textColorHint="@android:color/white"
            app:boxStrokeWidthFocused="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TelefonoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo: Correo -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/CorreoEt"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:startIconDrawable="@drawable/baseline_email_24"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/input_outline"
            app:hintTextColor="@android:color/white"
            app:startIconTint="@android:color/white"
            app:endIconTint="@android:color/white"
            android:textColorHint="@android:color/white"
            app:boxStrokeWidthFocused="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CorreoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo: Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/ContraseñaEt"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/baseline_lock_24px"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/input_outline"
            app:hintTextColor="@android:color/white"
            app:startIconTint="@android:color/white"
            app:endIconTint="@android:color/white"
            android:textColorHint="@android:color/white"
            app:boxStrokeWidthFocused="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ContraseñaEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo: Confirmar Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/ConfirmarContraseñaEt"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/baseline_lock_24px"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/input_outline"
            app:hintTextColor="@android:color/white"
            app:startIconTint="@android:color/white"
            app:endIconTint="@android:color/white"
            android:textColorHint="@android:color/white"
            app:boxStrokeWidthFocused="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmarContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón Registrar -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/RegistrarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/notoserif"
            android:textColor="@android:color/white"
            android:text="Registrar"
            android:background="@drawable/btn_login_background"
            app:backgroundTint="@null"
            app:rippleColor="@null" />

        <!-- Texto ya tengo cuenta -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/TengounacuentaTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/TengounacuentaTXT"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>